--- a/book/book_0019.html
+++ b/book/book_0019.html
@@ -57,5 +57,14 @@
     <p style="font-stretch: normal; line-height: normal; font-family: '.Apple SD Gothic NeoI'; color: #000000;" data-ke-size="size16"><span style="font-family: 'Nanum Gothic';"><span style="font-stretch: normal; line-height: normal;">257 : (</span>즉각적인<span style="font-stretch: normal; line-height: normal;"> </span>만족<span style="font-stretch: normal; line-height: normal;">) </span>책임감과<span style="font-stretch: normal; line-height: normal;"> </span>의무감에는<span style="font-stretch: normal; line-height: normal;"> </span>심드렁하고<span style="font-stretch: normal; line-height: normal;"> </span>자신의<span style="font-stretch: normal; line-height: normal;"> </span>즉각적인<span style="font-stretch: normal; line-height: normal;"> </span>욕구에만<span style="font-stretch: normal; line-height: normal;"> </span>반짝인다</span></p>
     <p style="font-stretch: normal; line-height: normal; font-family: '.Apple SD Gothic NeoI'; color: #000000;" data-ke-size="size16"><span style="font-family: 'Nanum Gothic';"><span style="font-stretch: normal; line-height: normal;">259 : </span>어떤<span style="font-stretch: normal; line-height: normal;"> </span>때는<span style="font-stretch: normal; line-height: normal;"> </span>아이의<span style="font-stretch: normal; line-height: normal;"> </span>욕구를<span style="font-stretch: normal; line-height: normal;"> </span>즉각적으로<span style="font-stretch: normal; line-height: normal;"> </span>충족시켜<span style="font-stretch: normal; line-height: normal;"> </span>주어야<span style="font-stretch: normal; line-height: normal;"> </span>함<span style="font-stretch: normal; line-height: normal;"> / </span>잠시<span style="font-stretch: normal; line-height: normal;"> </span>연기한다거나<span style="font-stretch: normal; line-height: normal;"> </span>때로는<span style="font-stretch: normal; line-height: normal;"> </span>단호하게<span style="font-stretch: normal; line-height: normal;"> </span>거절하는<span style="font-stretch: normal; line-height: normal;"> </span>일도<span style="font-stretch: normal; line-height: normal;"> </span>포함된다</span></p>
 
+    <h3 id="심리학"><strong>심리학</strong></h3>
+    <p> <a href="./book_0118.html">118. 무조건 당신편</a> </p>
+    <p> <a href="./book_0113.html">113. 마음 실험실</a> </p>
+    <p> <a href="./book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
+    <p> <a href="./book_0102.html">102. 자제력 수업</a> </p>
+    <p> <a href="./book_0095.html">095. 자존감의 여섯 기둥</a> </p>
+    <p> <a href="./book_0027.html">027. 욱하는 성질 죽이기</a> </p>
+    <p> <a href="./book_0026.html">026. 백곰 심리학</a> </p>
+    <p> <a href="./book_0019.html">019. 가족의 두 얼굴</a> </p>
     
 </body>
