--- a/book/book_0102.html
+++ b/book/book_0102.html
@@ -129,6 +129,16 @@
     <p data-ke-size="size18"><span>지음: 피터 홀린스, &nbsp;옮김: 공민희,&nbsp; 출판사: 포레스트북스,&nbsp; 출판년도: 2017&nbsp; (2019 한국어판)&nbsp;</span></p>
     <p data-ke-size="size18">&nbsp;</p>
 
+    <h3 id="심리학"><strong>심리학</strong></h3>
+    <p> <a href="./book_0118.html">118. 무조건 당신편</a> </p>
+    <p> <a href="./book_0113.html">113. 마음 실험실</a> </p>
+    <p> <a href="./book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
+    <p> <a href="./book_0102.html">102. 자제력 수업</a> </p>
+    <p> <a href="./book_0095.html">095. 자존감의 여섯 기둥</a> </p>
+    <p> <a href="./book_0027.html">027. 욱하는 성질 죽이기</a> </p>
+    <p> <a href="./book_0026.html">026. 백곰 심리학</a> </p>
+    <p> <a href="./book_0019.html">019. 가족의 두 얼굴</a> </p>
+
     <p data-ke-size="size16"><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9791189584160&amp;orderClick=LEA&amp;Kc=" target="_blank" rel="noopener">
         <img src="./book_0102.jpg" alt="책이미지 : 자제력 수업" ></a></p>
 
