--- a/book/book_0113.html
+++ b/book/book_0113.html
@@ -154,6 +154,16 @@
     <p data-ke-size="size16"><span style="color: #006dd7;"><b>추천 ★<b>☆</b>☆, 다시 ★★<b>☆</b></b></span></p>
     <p data-ke-size="size16">&nbsp;</p>
 
+    <h3 id="심리학"><strong>심리학</strong></h3>
+    <p> <a href="./book_0118.html">118. 무조건 당신편</a> </p>
+    <p> <a href="./book_0113.html">113. 마음 실험실</a> </p>
+    <p> <a href="./book_0108.html">108. 서른살이 심리학에게 묻다</a> </p>
+    <p> <a href="./book_0102.html">102. 자제력 수업</a> </p>
+    <p> <a href="./book_0095.html">095. 자존감의 여섯 기둥</a> </p>
+    <p> <a href="./book_0027.html">027. 욱하는 성질 죽이기</a> </p>
+    <p> <a href="./book_0026.html">026. 백곰 심리학</a> </p>
+    <p> <a href="./book_0019.html">019. 가족의 두 얼굴</a> </p>
+
     <p data-ke-size="size16"><a href="http://www.kyobobook.co.kr/product/detailViewKor.laf?ejkGb=KOR&amp;mallGb=KOR&amp;barcode=9791156757887&amp;orderClick=LAG&amp;Kc=" target="_blank" rel="noopener">
         <img src="./book_0113.jpg" alt="책이미지 : 마음 실험실" ></a></p>
 
