--- a/docu/docu_0013.html
+++ b/docu/docu_0013.html
@@ -78,11 +78,13 @@
     <body class="vscode-body vscode-light">
         <h1 id="202308-유튜브">2023.08 유튜브</h1>
 <ul>
-<li>홍사훈, 815, 김작가</li>
-<li>김영익, 오건영, 이광수, 채상욱, 빈센트</li>
+<li>홍사훈, 김작가</li>
+<li>김영익, 오건영, 빈센트, 이광수(부동산), 채상욱(부동산), 안유화(중국)</li>
 </ul>
 <p>내역</p>
 <ul>
+<li>삼프로 : 문홍철 (23.08.14)</li>
+<li>김작가 : 안유화 (23.08.07녹화, 더플로)</li>
 <li>시사기획 창 426.미래로 넘기는 시한폭탄 (23.07.11)</li>
 <li>삼프로 글로벌이슈체크 최홍석 (23.08.10)</li>
 <li>삼프로 In-Depth30 이선엽 (23.08.11)</li>
@@ -92,6 +94,67 @@
 <li>김작가 : 빈센트 (23.07.31녹화) : 한 달 동안 변동된 내역 전반적인 설명 : 거시적 관점</li>
 <li>북언더스탠딩, 돈을 찍어내는 제왕 연준, 채상욱 (23.08.06)</li>
 <li>김작가 : 박은정(23.07.19녹화)</li>
+</ul>
+<br>
+<h3 id="삼프로--문홍철-230814"><strong>삼프로 : 문홍철 (23.08.14)</strong></h3>
+<ul>
+<li>장기금리는 미국 채무에 직접적인 영향 받음</li>
+<li>피치 미리 알고 선빵, 부채 많이 나옴</li>
+<li>거버넌스 훼손</li>
+<li>공공부채를 볼 때는 생각을 바꾸어야 함</li>
+<li>정부 : 투자할 수요가 없어도 투자함, 눈먼돈이다 (민간은 이익 보일 때만 부채 냄)</li>
+<li>성장이 떨어질 때 정부가 부채를 내서 늘어남</li>
+<li>채권 물량 많을 때 금리 오르는 기간은 짧더라. 성장 낮은 것 인식한 이후 다시 떨어짐</li>
+<li>세수가 줄어들어서 채권 발행 늘어남</li>
+<li>GDP / GDI 단기적으로 차이 날 수 있음. 내년에 거꾸로 예상 (경제침체). show me the money(세수, 실제 경제)</li>
+<li>조시회피 : 역외에서 투자로 다시 들어옴 (???)</li>
+<li>주식 시장은 경기를 반영하는 것이 아니라 금리를 반영한다.</li>
+<li>소프트파워 교역이 안된다 : 헐리우드 vs OTT : 비교역재과 교역재로 바뀜</li>
+</ul>
+<h3 id="김작가--안유화-230807녹화-더플로"><strong>김작가 : 안유화 (23.08.07녹화, 더플로)</strong></h3>
+<ul>
+<li>책 더 플로</li>
+<li>시대적 흐름을 읽어야 한다</li>
+<li>71년생, 89학번 (초등 5년으로 한국보다 1년 빠름)</li>
+<li>사회주의 시장경제 (92년, 자본주의 요소 헌법 반영)</li>
+<li>흐름을 탄 사람은 부를 얻음 : 자본주의 요소 들어올 때 사업을 한 사람, 20년의 상승을 그대로 수혜(자본주의, WTO가입)  /  헝다/완다 부도, 시대가 바뀌었는데 변화 못함</li>
+<li>인생이 남보다 더 풀리려면 내가 어느 시대에 있는지를 알아야 한다</li>
+<li>2가지 큰 흐름 : 고령화, MZ세대 부상</li>
+<li>세상에 대한 욕망이 없음(리비도경제, 물질적욕망), 전업자녀</li>
+<li>도파민 경제 : 정신적으로 만족, 가상세계</li>
+<li>콘트라티예프파동 : 새로운 혁신 기술이 나오면 산업을 50년 이끔</li>
+<li>섹터 선정(80%), 종목 선정(20%)</li>
+<li>애플 : 1개 기업 3조$, 그 시대 흐름의 전체를 taking 함, 새로운 도전 안하면 사라지는 기업이 됨, VR환경/자율주행자동차 같은 것</li>
+<li>다음 산업 주기 : AI, 바이오</li>
+<li>모를 때는 ETF로 하면 된다, 종목 투자하면 안된다</li>
+<li>메타버스 이코노미 : MZ세대 대부분 가상세계에서 산다</li>
+<li>사람이 몰라서, 믿음이 없어서, 몰려갔다 몰려나옴 (메타버스, 블록체인)</li>
+<li>반도체 이후 주도산업 : 데이터 주도</li>
+<li>미국(90)/중국(20)이 대부분 가짐, 한국 등 일부 국가</li>
+<li>기업 : 디지털화, 모바일화, 자동화, 스마트화(고객맞춤형)</li>
+<li>자산관리 안하면 앉아서 거지된다. 인플레이션이 도둑질해 가는 것</li>
+<li>3년 이상 가져간다.</li>
+<li>미국 주식시장 장기적으로 우상향했는데, 향후에는? 부채한도 계속늘리면서 가능할까? 미중 경쟁으로 탈세계화로 한계</li>
+<li>중국에서 전세계로 상품 수출, 달러 가져온 것을 투자, 중국(제조)/미국(금융)</li>
+<li>10년 동안 18조 부가 (8조 중국, 6조 미국, 나머지 국가)</li>
+<li>패권국가</li>
+<li>중국이 생산하지 않으면 세계가 돌아가지 않는다 (요소수, 생산할 수 있으나 생산하지 않는다)</li>
+<li>인도(인프라 부족), 베트남(인구 부족)</li>
+<li>3가지 시나리오 : 연구할 때 (Normal(양전:협력할것하고), Best, Worst(열전:대만전쟁))</li>
+<li>Tail Risk(대만전쟁), 나토를 아시아로 끌어들임(일본), 대만 물류</li>
+<li>반도체 서로 의존하는 산업 (핵심기술은 미국, 원료 등 비중은 중국이 높음)</li>
+<li>세계화 강조(중국) vs 디리스킹(미국)</li>
+<li>반도체 기술돌파 진행중</li>
+<li>우크라이나 대단한 나라(핵, 곡식) : 결과 - 전쟁으로 폐허가 됨</li>
+<li>친미/친러 세력 : 정치권이 자기 세력 유지위한 단기적인 의사결정 내림</li>
+<li>미중 갈등 속에서 공급망 확인해야 함</li>
+<li>생산과잉(98년경), 도시화(부동산 시장화.개인이 살 수 있도록 함)/수출주도형경지(WTO 2001 관세)</li>
+<li>4조달러 생산량 누가 사나 : 고령화, MZ세대 2015년부터 보임</li>
+<li>대부분 부동산 업체 파산</li>
+<li>지본 시장 띄울 방법뿐</li>
+<li>세계 1위 자본 시장 만들지 않으면 살지 못한다</li>
+<li>은행은 기업 좋을 때만 함께 감, 자본시장은 함께 감, RISK를 자본시장과 함께 짐</li>
+<li>위험을 감수하는 삶이 제대로 사는 삶 : 원하는 것을 가질 수 없다</li>
 </ul>
 <br>
 <h3 id="시사기획-창-426미래로-넘기는-시한폭탄-230711"><strong>시사기획 창 426.미래로 넘기는 시한폭탄 (23.07.11)</strong></h3>
@@ -115,6 +178,7 @@
 <li>1988년 보험류율 3%, 소득대체율 70 -&gt; 1998년 9% 60% -&gt; 2007년 9% 40% (2028년까지)</li>
 <li>연금 재정에 대한 고갈</li>
 </ul>
+<br>
 <h3 id="삼프로-글로벌이슈체크-최홍석-230810"><strong>삼프로 글로벌이슈체크 최홍석 (23.08.10)</strong></h3>
 <ul>
 <li>국제유가 9개월만에 최고치, 공급우려가 중 디플레 상쇄</li>
