--- a/book/book_0124.html
+++ b/book/book_0124.html
@@ -61,7 +61,7 @@
 </ul>
 <h3 id="03-감정에-휩쓸리지-않으려면">03. 감정에 휩쓸리지 않으려면?</h3>
 <ul>
-<li>065 의사결정을 반드시 기록하는 습관을 들여야 합니다</li>
+<li>065 <strong>의사결정을 반드시 기록하는 습관을 들여야 합니다</strong></li>
 <li>066 인간은 자신의 과거 의사결정을 아주 많이 왜곡하여 기억합니다</li>
 <li>067 복잡적응계, 확률적 사고
 <ul>
@@ -108,11 +108,11 @@
 <li>156 <strong>예측과 노출</strong>
 <ul>
 <li>도로가 언제 무너질지 배팅하는게 '예측'</li>
-<li>도로가 무너질 것을 대비하여 보험을 들어놓는 것은 '노출'</li>
+<li>도로가 무너질 것을 대비하여 <strong>보험</strong>을 들어놓는 것은 '노출'</li>
 </ul>
 </li>
-<li>165 적절한 신념은 성과를 위해 반드시 필요하지만, 고집은 독입이니다</li>
-<li>167 가격은 우리가 치는 것이고, 가치는 우리가 받는 것이다. (그레이엄이 버핏에게)</li>
+<li>165 적절한 신념은 성과를 위해 반드시 필요하지만, 고집은 독입니다</li>
+<li>167 가격은 우리가 치르는 것이고, 가치는 우리가 받는 것이다. (그레이엄이 버핏에게)</li>
 <li>170 기업은 주주들에게 특정 시점에 특정 금액의 현금을 돌려줄 의무가 없습니다. (경영진의 판단)</li>
 <li>172 (내재가치) 원하는 값이 있다면 얼마든지 숫자를 끼워 맞춰서 그 값을 만들어 내는 도구가 되는 것이 가치평가 기법</li>
 <li>176 역사는 반복되는가?
@@ -127,14 +127,65 @@
 <br>
 <h2 id="part3-이미는-질문-지지-않는-투자">PART3. 이미는 질문, 지지 않는 투자</h2>
 <h3 id="07-가격이란-무엇인가">07. 가격이란 무엇인가</h3>
+<ul>
+<li>198 인간은 정보량의 제한, 처리 능력의 부족, 감정의 영향 등으로 비합리적인 판단을 할 수 있다</li>
+<li>200 (오일쇼크) 가격이 상승하는 이유는 실제적인 공급 감소가 아니라 공급 감소가 생길 것이라는 두려움 때문이다</li>
+<li>201 사람들의 기대와 어긋난 일이 발생해야 가격이 변동한다</li>
+<li>205 가정1. 주식에는 내재가치가 존재한다 : 내재가치 산정이 매우 주관적이다. 범위도 상당히 넓다</li>
+<li>205 가정2. 가격이 가치와 차이날 때가 있다</li>
+<li>206 가정3. 장기적으로 가격은 가치에 수렴한다 : 가정2는 시장이 비효율적이로고 했는데, 가정3은 시장이 효율적이라고 하네</li>
+<li>206 현재는 왜 괴리가 있는지, 나중에는 왜 수렴하는지에 대한 단서</li>
+<li>207 가격이 가치에 수렴할 때까지 기다리라고 하는데 얼마나 기다려야할지 알수가 없습니다</li>
+<li>208 행동지침4. 확실히 눈에 보이는 가치를 추구하라 : 개별적인 취향임. 무형의 가치를 기반으로 하는 기업의 기회를 놓쳐 버림</li>
+<li>209 무한후퇴라는 논리학 오류 : 가격은 가치에 수렴하지 않습니다. 스쳐 지나가거나, 영원히 도달하지 않습니다</li>
+<li>213 카페24 : 고평가 논란 속에 상장, 캐나다 쇼피파이 주가 벤치마킹하여 오름 그리고 떨어짐 (이 수많은 기회를 놓침)</li>
+</ul>
 <h3 id="08-초과수익을-어떻게-낼-것인가">08. 초과수익을 어떻게 낼 것인가</h3>
+<ul>
+<li>218 내 생각을 파악하기 위해서는 기록하는 습관를 들여야 합니다</li>
+<li>230 결과에 집착하지 마라. 행동의 결과는 신의 뜻이지, 너의 것이 아니다</li>
+<li>233 양적완화는 경기부양책이 아니라 시스템 리스크 대응책입니다</li>
+</ul>
 <h3 id="09-나는-어떤-투자자인가">09. 나는 어떤 투자자인가</h3>
+<ul>
+<li>241 주식투자에 관심 없는 삶이 훨씬 더 윤택하다. 주식으로 돈을 번다는 것은 굉장히 힘든 일이다</li>
+<li>242 현명한 투자자 (방어적 투자자 vs 공격적 투자자 : defensive vs enterprizing)</li>
+<li>242 enterprizing : 남보다 더 많은 노력을 쏟아부어서 남과 다른 성과를 냄 (진취적인, 기업가적인, 모험심 있는)</li>
+<li>243 그레이엄 방어적 투자자 : 물가연동채권이나 대형 우량주, 이제는 ETF로 가능</li>
+<li>245 투자는 원금손실의 가능성을 무릅쓰고 불확실한 미래에 베팅하는 일 : 투자는 선택입니다</li>
+<li>책 : 번스타인 : 위험한 자산배분 투자자 (주식, 채권 각각 조금씩은 가지고 있어야)</li>
+<li>252 주시시장의 하락으로부터 돈을 버는 포지션을 취한다는 것은 일단 어느 정도 확률적으로 불리한 게임 (장기적으로 전체 시장은 우상향)</li>
+<li>253 (코인가격상승)으로 발생하는 스트레스를 받지 않으려면 얼마의 현금을 코인으로 가지고 있어야 함 (일부 투자하는 것은 중립 포지션을 가지는 것으로 없을 때 발생하는 스트레스 해소에 도움)</li>
+</ul>
 <br>
 <h2 id="part3-지속-가능한-성장을-위하여">PART3. 지속 가능한 성장을 위하여</h2>
 <h3 id="10-누구로부터-배울-것인가">10. 누구로부터 배울 것인가</h3>
+<ul>
+<li>266 펀드매니저의 역할은 주가를 맞히는 것이 아니라 기업의 펀드멘터을 분석하고 이해하는데 도움을 주는 것</li>
+<li>273 팩트 : 금리가 올랐다, 해석 : ~~ 때문에 금리가 올랐다, 전망(예측) : 그래서 주가를 ~될 것이다 (<strong>아무도 모른다</strong>)</li>
+</ul>
 <h3 id="11-확률론적-사고">11. 확률론적 사고</h3>
+<ul>
+<li>279 실력은 기댓값이고 운은 편차</li>
+<li>281 운이 크게 영향을 미치는 영역에서 실력이란 무ㅇ인가</li>
+<li>284 우리는 어떤 게임을 하든 최대손실 금액을 고려해야 합니다</li>
+<li>288 실력이란, 운이 좋아지게 하려는 시도가 아니라 운이 상쇄되는 구조를 자는 일입니다.</li>
+</ul>
 <h3 id="12-바벨-전략">12. 바벨 전략</h3>
+<ul>
+<li>292 루딕오류 : 룰이 명확하게 정해진 게임에서의 추론을 현실 세계의 추론에 그대로 적용하려는 오류 (실험실과 실제는 다르다)</li>
+<li>292 현실세계에서 엄밀한 의미의 다수시행은 불가능합니다</li>
+<li>295 나심 탈레브. 안티프래질. 바벨전략 : 극단적으로 위험을 회피하는 선택과 극단적으로 위험을 추구하는 선택을 병행</li>
+<li>301 마켓타이밈을 노리지 않고 1년에 한 번 리밸런싱 해주는 것만으로 재테크는 끝입니다</li>
+<li>302 건강, 신뢰는 오목한 시스템 (약간만 이상해져도 큰 손실)</li>
+<li>303 교육, 커뮤니티활동, 여행은 복록한 시스템 (조그만 활동도 큰 만족) (여행자보험)</li>
+</ul>
 <h3 id="에필로그">에필로그</h3>
+<ul>
+<li>309 불확실한 세상에서는 '안다'라는 착각이 가장 위험합니다</li>
+<li>310 나심 탈래브 : 스킨 인 더 게임 : 조언을 해 준다면 그 조언이 틀렸을 때 본인도 피해를 입어야만 합니다</li>
+<li>310 안티프래질해지기 위해서는 오목(프래질)한 영역에서는 어떤 위험에도 노출시키지 말고, 볼록한 영역에서는 최대한 리스크를 감수해야 합니다</li>
+</ul>
 
         
         
