--- a/study/study_0052.html
+++ b/study/study_0052.html
@@ -43,6 +43,7 @@
         <h1 id="vsc">VSC</h1>
 <h2 id="230402-맥--vsc--github">(23.04.02) 맥 : VSC &amp; github</h2>
 <p>간만에 맥에서 작업하려니 안되네, 맥OS 업그레이드 이후 사라진듯, git 새로 설치이후 설정함</p>
+<br>
 <h2 id="1-컬럼단위-글쓰기">1. 컬럼단위 글쓰기</h2>
 <p>Ctrl + Alt + 화살표 위 또는 아래</p>
 <br>
@@ -61,7 +62,7 @@
 . Material Icon Theme : 언어별 아이콘 부여
 . Prettier : 코드 배치 이쁘게  
 </code></pre>
-<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0052.JPG" alt="마켓플레이스"></p>
+<p><img src="./img/s0052.JPG" alt="마켓플레이스"></p>
 <h3 id="31-korean-languange-pack-for-visual-studio-code">3.1 Korean Languange Pack for Visual Studio Code</h3>
 <ul>
 <li>메뉴를 한글로 표시함</li>
@@ -84,7 +85,7 @@
 </code></pre>
 <br>
 <h2 id="4-소스관리--git">4. 소스관리 / Git</h2>
-<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0052_1.png" alt="소스관리"></p>
+<p><img src="img/s0052_1.png" alt="소스관리"></p>
 <ol>
 <li>
 <p>Refresh : 소스제어에서 어떤 것들이 바뀌었는지 확인</p>
@@ -102,7 +103,7 @@
 <br>
 <h2 id="5-색테마">5. 색테마</h2>
 <p>파일 - 기본설정 - 색테마</p>
-<p><img src="file:////Users/sk/MY/new2/new2/study/img/s0052_2.png" alt="색테마"></p>
+<p><img src="img/s0052_2.png" alt="색테마"></p>
 
         
         
