--- a/study/study_0051.html
+++ b/study/study_0051.html
@@ -77,7 +77,7 @@
     </head>
     <body class="vscode-body vscode-light">
         <h1 id="db">DB</h1>
-<h2 id="1-array">1. array</h2>
+<h2 id="a01-array">A01. array</h2>
 <h3 id="11-any">1.1 any</h3>
 <p>a = any (배열) : 배열 속에서 특정 값이 있는지 여부를 확인</p>
 <p>a &lt;&gt; all (배열) : 논리연산이라 단순하게 not이 아님</p>
@@ -87,33 +87,30 @@
 <h3 id="14-string_to_array--string을-array로-변환">1.4 string_to_array : string을 array로 변환</h3>
 <p>array_cat(string_to_array('a,b,c',','), string_to_array('d:e:f',':'))</p>
 <br>
-<h2 id="2-case-when-then-end">2. case when then end</h2>
+<h2 id="a02-case-when-then-end">A02. case when then end</h2>
 <p><strong>case</strong> contype <strong>when</strong> 'p' <strong>then</strong> 'PK' <strong>when</strong> 'u' <strong>then</strong> 'UK' <strong>end</strong></p>
 <br>
-<h2 id="3-string_agg">3. string_agg()</h2>
-<p>group by SQL문 중에서 select문에서 사용 가능함</p>
+<h2 id="a03-string_agg">A03. string_agg()</h2>
+<ul>
+<li>group by SQL문 중에서 select문에서 사용 가능함</li>
+<li>string_agg(indtype || '-' || sno, ', ' <strong>order by</strong> indtype)</li>
+</ul>
 <br>
-<h2 id="4-with">4. with</h2>
+<h2 id="a04-with">A04. with</h2>
 <p>with aaa as ( with절 NESTED ) select * from aaa;</p>
 <p>with aaa as ( sql문 ), ccc as ( sql문2 ) select * from aaa, ccc;  -- 여러개도 가능</p>
 <br>
-<h2 id="5-outer-join">5. outer join</h2>
+<h2 id="a05-outer-join">A05. outer join</h2>
 <p>from A full outer join B on A.x = B.x
 where ...</p>
 <br>
-<h2 id="6-block-sql">6. block sql</h2>
+<h2 id="a06-block-sql">A06. block sql</h2>
 <p><strong>do $$</strong></p>
 <p>begin</p>
 <p>select now();  -- select문장은 안 좋아함</p>
 <p>end; $$;</p>
 <br>
-<h2 id="7-디비버-리드오니">7. 디비버 리드오니</h2>
-<p>화면 상단 열쇄 클릭</p>
-<br>
-<h2 id="8-디비버-팀워크">8. 디비버 팀워크</h2>
-<p>Network 안되는 곳에서 사용 불가</p>
-<br>
-<h2 id="9-문자-비교-오라클-vs-postgresql">9. 문자 비교 (오라클 vs PostgreSQL)</h2>
+<h2 id="a07-문자-비교-오라클-vs-postgresql">A07. 문자 비교 (오라클 vs PostgreSQL)</h2>
 <p>오라클 :</p>
 <ul>
 <li>varchar2(바이트단위) : nvarchar2(문자단위)   (lengthb vs length)</li>
@@ -124,7 +121,7 @@ where ...</p>
 <li>문자갯수로 처리함</li>
 </ul>
 <br>
-<h2 id="10-한꺼번에-테이블-처리">10. 한꺼번에 테이블 처리</h2>
+<h2 id="a08-한꺼번에-테이블-처리">A08. 한꺼번에 테이블 처리</h2>
 <ul>
 <li>
 <p>select * into new_table from old_table;</p>
@@ -134,7 +131,26 @@ where ...</p>
 </li>
 </ul>
 <br>
-<h2 id="11-디비버--export">11. 디비버 : export</h2>
+<h2 id="a09-권한부여">A09. 권한부여</h2>
+<ul>
+<li>grep fl_from to fl_to;</li>
+<li>grant truncate on all tables in schema fl_from to tmp_user;</li>
+<li>alter default privileges in schema fl_from grant truncate on tables to tmp_user;</li>
+</ul>
+<br>
+<h2 id="a10-comment">A10. comment</h2>
+<ul>
+<li>comment on table table_name is '테이블명';</li>
+<li>comment on column tabnm.colnm is '컬럼명';</li>
+</ul>
+<br>
+<h2 id="b1-디비버-리드오니">B1. 디비버 리드오니</h2>
+<p>화면 상단 열쇄 클릭</p>
+<br>
+<h2 id="b2-디비버-팀워크">B2. 디비버 팀워크</h2>
+<p>Network 안되는 곳에서 사용 불가</p>
+<br>
+<h2 id="b3-디비버--export">B3. 디비버 : export</h2>
 <ul>
 <li>
 <p>table or script to table 가능</p>
@@ -142,6 +158,11 @@ where ...</p>
 <li>
 <p>타입 정확하게 못 잡을 수 있으니깐, 사전 확인 필요</p>
 </li>
+</ul>
+<br>
+<h2 id="c1-unix--grep">C1. UNIX : grep</h2>
+<ul>
+<li>grep -n xxx 로그파일명 | grep duration</li>
 </ul>
 
         <script async src="https://cdn.jsdelivr.net/npm/katex-copytex@latest/dist/katex-copytex.min.js"></script>
