--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <div> 
         <h3>BOOK</h3>
         <p> 23.05.01 50권/년 ^^ </p>
+        <p> <a href="./book/book_0128.html">128. AI시대의 고등교육 </a> </p>
         <p> <a href="./book/book_0127.html">127. 화가가 사랑한 나무들 </a> </p>
         <p> <a href="./book/book_0112.html">112. 피니시 (v4)###</a> </p>
         <p> <a href="./book/book_0126.html">126. 중학생 필독 시 (작성중) </a> </p>
