--- a/study/study_0051.html
+++ b/study/study_0051.html
@@ -145,24 +145,115 @@ where ...</p>
 </ul>
 <br>
 <h2 id="b1-디비버-리드오니">B1. 디비버 리드오니</h2>
-<p>화면 상단 열쇄 클릭</p>
-<br>
-<h2 id="b2-디비버-팀워크">B2. 디비버 팀워크</h2>
-<p>Network 안되는 곳에서 사용 불가</p>
-<br>
-<h2 id="b3-디비버--export">B3. 디비버 : export</h2>
 <ul>
 <li>
-<p>table or script to table 가능</p>
+<p>화면 상단 열쇄 클릭</p>
 </li>
 <li>
-<p>타입 정확하게 못 잡을 수 있으니깐, 사전 확인 필요</p>
+<p>Connetion 정보 변경 : General - Security</p>
+<ul>
+<li>Restrict data edit</li>
+<li>Restrict structure edit</li>
+</ul>
+</li>
+<li>
+<p>트랜잭션 모드</p>
+<ul>
+<li>auto commit : 실수로 잘못 바꿀 위협</li>
+<li>manual commit : 가동계 데이터 lock 발생 우려</li>
+</ul>
 </li>
 </ul>
 <br>
-<h2 id="c1-unix--grep">C1. UNIX : grep</h2>
+<h2 id="b2-디비버-팀워크">B2. 디비버 팀워크</h2>
 <ul>
-<li>grep -n xxx 로그파일명 | grep duration</li>
+<li>유료버전에서만 가능</li>
+<li>Network 안되는 곳에서 사용 불가</li>
+</ul>
+<br>
+<h2 id="b3-database-tasks">B3. Database Tasks</h2>
+<ul>
+<li>디비버에서 작업 관리
+<ul>
+<li>무료버전에서는 1개씩만 가능 (1개씩 여러 개 실행하면 됨)</li>
+<li>Script 실행 가능</li>
+<li>import/export 실행 가능</li>
+</ul>
+</li>
+<li>표준 점검 실행(script)  -&gt; export 실행 -&gt; excel 업로드</li>
+</ul>
+<br>
+<h2 id="b4-디비버--import">B4. 디비버 : import</h2>
+<ul>
+<li>table or script to table 가능</li>
+<li>타입 정확하게 못 잡을 수 있으니깐, 사전 확인 필요</li>
+<li>trucate lock 주의</li>
+<li>(?) use bulk load</li>
+<li>시작 후 진행상태 확인 가능 (오른쪽 아래에 메시지 같은 것 클릭하면 창이 뜸)</li>
+</ul>
+<br>
+<h2 id="c1-postgresqlconf">C1. postgresql.conf</h2>
+<ul>
+<li>port = 1111           # 포트번호</li>
+<li>max_connection = 100  # 최대 connection 수</li>
+<li>log_directory         # 로그 파일 위치</li>
+<li>log_filename          # 로그 파일 생성 규칙 (날짜)</li>
+<li>log_file_mode         # 0600</li>
+<li>log_min_duration_statement  # 3000(3초) : Long SQL</li>
+<li>log_line_prefix       # 어떤 내용이 담기나</li>
+<li>edb_audit</li>
+<li>autovacuum = on</li>
+<li>autovacuum_freeze_max_age  (change requires restart)</li>
+</ul>
+<br>
+<h2 id="c2-db-로그-분석">C2. DB 로그 분석</h2>
+<h3 id="grep">grep</h3>
+<ul>
+<li>
+<p>grep -n xxx 로그파일명 | grep duration</p>
+</li>
+<li>
+<p>tail -f 로그파일명 | grep 서버IP | grep -e ERROR -e FATAL, ShareLock, ExclusiveLock, deadlock, &quot;Wait queue&quot;</p>
+</li>
+</ul>
+<h3 id="findstr">findstr</h3>
+<ul>
+<li>
+<p>A 또는 B</p>
+<ul>
+<li>findstr &quot;123 456 789&quot; &gt; processes.log</li>
+</ul>
+</li>
+<li>
+<p>특정문자열 찾기 (. 한글자, .* 여러글자)</p>
+<ul>
+<li>findstr &quot;duration.*&quot; &gt; &quot;fl...&quot; &gt; output.filename</li>
+</ul>
+</li>
+<li>
+<p>숫자 [0-9]{6}.[0-9]{3} : 100초 이상 밀리초 (long sql 찾기)</p>
+</li>
+</ul>
+<h3 id="vsc">VSC</h3>
+<ul>
+<li>찾기 (찾기 창 오른쪽에 옵션 있음 : 대소문자구분/정규식 )</li>
+</ul>
+<br>
+<h2 id="d1-맥스게이지">D1. 맥스게이지</h2>
+<ul>
+<li>Lock 조회 후 상세화면에서 Kill 가능</li>
+</ul>
+<br>
+<h2 id="e1-기타등등">E1. 기타등등</h2>
+<ul>
+<li>DB Connection Timeout</li>
+<li>lock 현황
+<ul>
+<li>alter table add column / truncate / index : lock 주의</li>
+</ul>
+</li>
+<li>파티션 테이블 Purge</li>
+<li>SEQ 초기화</li>
 </ul>
 
         <script async src="https://cdn.jsdelivr.net/npm/katex-copytex@latest/dist/katex-copytex.min.js"></script>
