--- a/book/book_0134.html
+++ b/book/book_0134.html
@@ -229,8 +229,75 @@
 <h2 id="6-사실주의와-바르비종파18201880"><strong>6. 사실주의와 바르비종파(1820~1880)</strong></h2>
 <br>
 <h2 id="7-인상주의18601890"><strong>7. 인상주의(1860~1890)</strong></h2>
+<p>122 인상주의</p>
+<ul>
+<li>미술사 큰 흐름 2개 : 1400년대 르네상스, 1800년대 후반 인상주의</li>
+<li>오르세 미술관 : 인상주의 작품 (루브르 박물관보다 더 인기 많은 미술관)</li>
+<li>르네상스(이탈리아) - 잠시 북유럽 - 프랑스가 주도권을 쥠</li>
+<li>짧은 순간에 스치듯 남는 머릿속 잔상을 표현</li>
+<li>어떤 상태로 계속 머물지 않고 자연의 움직임으로 인해 매순간 변화된다</li>
+<li>찰나를 포착해서 주변의 자세한 것을 뭉개버리고 표현하고자 하는 피사체의 남은 잔상만 그린다</li>
+</ul>
+<p>126 에두아르 마네(프랑스, 1832~1883)</p>
+<ul>
+<li>신고전주의 화가에게 수업받다, 독학으로 변경</li>
+<li>벨라스케스에겐 공간감, 고야에게는 그림의 주제에 대한 생각을 배움</li>
+<li>1863 올랭피아 주목받지 못함 - 낙선자 전람회 개최, 풀밭 위의 점심, 외설적이라고 비판, 평명적으로 그림</li>
+<li>폴리 베르제르 바 : 바텐더 여자가 정면으로 바라봄, 거울 속엔 그녀의 뒷모습과 손님들이 보임 : 예술의 자유를 보여줌</li>
+<li>피리부는 소년 : 2차원의 미술, 색채를 강조, 상의와 모자는 평면</li>
+</ul>
+<p>132 클로드 모네(프랑스, 1840~1926)</p>
+<ul>
+<li>1890 자베르니에 집 마련, 호수에 핀 수련 연작(250여점),  카미유의 임종</li>
+</ul>
+<p>134 베르트 모리조(프랑스, 1841~1895)</p>
+<ul>
+<li>마네와 친분, 마네의 동생과 결혼</li>
+<li>집 안 풍경 위주 그림</li>
+<li>1872 요람, 1875 식당에서 (강렬한 붓터치)</li>
+</ul>
+<p>134 피에르 오귀스트 르누아르(프랑스, 1841~1895)</p>
+<ul>
+<li>행복한 시간을 포착해서 아름답게 표현, 긍정적 화품</li>
+<li>독창석, 주제의 표현성이 떨어진다, 사교성이 높아서 유명해진 것  vs  상업적으로 성공하려고 했다기 보다는 자신의 철학(그림이란 즐겁고 유쾌하며 예쁜 것이어야 함, 이미 세상은 불쾌함)</li>
+</ul>
+<p>136 애드가 드가(프랑스, 1834~1917)</p>
+<ul>
+<li>부유한 집안이었으나, 아버지가 죽고 빚이 생겨 팔릴만한 그림만 그림</li>
+<li>아름다운 발레리나, 무대 뒤의 감시하는 남자까지 그림</li>
+<li>실내에서 주로 그림, 다양한 구도(천장에서 내려다 보는 시점, 다른 사람의 일상을 엿보는 시점 등)</li>
+</ul>
+<p>138 카미유 피사로(프랑스, 1830~1903)</p>
+<ul>
+<li>점묘법의 창시자 (쇠라와 스낙)</li>
+<li>점묘법 : 색을 섞으면 채도 떨어짐, 원색을 그대로 교차하여 사용, 가까이서 보면 각각의 점이나 멀리서 보면 채도가 떨어지지 않는 다른 색으로 보임</li>
+</ul>
 <br>
 <h2 id="8-후기-인상주의18901920"><strong>8. 후기 인상주의(1890~1920)</strong></h2>
+<p>144 인상주의 그림이 세밀하게 표현하는 것을 자제했다면 후기 인상주의 그림은 이보다 더 거칠고 투박하다</p>
+<p>144 폴 세잔(프랑스, 1839~1906)</p>
+<ul>
+<li>지금 내 눈 앞에 나타난 것 이외에는 모두 잊어버리는 것이다. 나는 사과 하나로 파리를 놀라게 할 것이다</li>
+<li>사과는 정물임에도 움직일 듯 동적으로 연출</li>
+<li>입체파 피카소 : 나의 유일한 스승은 세잔밖에 없으며, 그는 우리 모두의 아버지이다</li>
+<li>사물을 단순화 처리(원통형, 구체, 원추형), 색의 조화만으로 그림</li>
+<li>노란 과일은 푸른색 옆에 배치, 초록색 과일은 붉은색 옆에 보색으로 배치 (색감을 더욱 강렬하게 하는 효과), 야수파와 추상화에 영향</li>
+<li>최초로 다시점 그림을 그려 입체파(큐비즘)을 낳았고, 그의 굵은 선은 야수파를 낳았다. 소재의 근본 형태와 색을 중요시 하면서 단순화시키는 추상화의 시초이기도 하다</li>
+</ul>
+<p>148 조르주 쇠라(프랑스, 1830~1903)</p>
+<ul>
+<li>점묘법 : 수많은 점으로 작품 하나를 완성해야 하므로 작품 하나가 완성되기까지 오랜 시간이 걸렸다</li>
+<li>그라자트 섬의 일요일 오후</li>
+</ul>
+<p>148 폴 고갱(프랑스, 1848~1903)</p>
+<ul>
+<li>투박한 남태평양 타히티 섬의 원주민 그림</li>
+<li>결혼이후 생활이 나아져 그림 그리기 시작</li>
+<li>1887 남대서양 마르티니크 섬 - 1888 10~12, 고흐의 동생 테오 주선으로 고흐와 작업</li>
+<li>1891 타히티 섬으로 떠남, 이주정책(정착금)</li>
+<li>1893 파리로 돌아와서 전시 대실패, 1895 되돌아감</li>
+<li></li>
+</ul>
 <br>
 <h2 id="9-모더니즘과-현대-미술1920"><strong>9. 모더니즘과 현대 미술(1920~)</strong></h2>
 <p>164  관객의 입장에서 중요한 것은 이때부터 누군가의 도움 없이 혼자 그림을 보고, 느끼고, 감동하는 시대는 끝났다는 것이다</p>
