--- a/book/book_0134.html
+++ b/book/book_0134.html
@@ -219,7 +219,15 @@
 <li>빵집 딸 마르게르타 루티</li>
 <li>바티칸 궁전 내부의 서명실 벽화 (4면 : 철학, 신학, 미학, 법학)</li>
 <li>바티칸 궁에 많은 성모 그림 : 마르게르타 얼굴로 그렸다고 함</li>
-<li>라 포르나리나 : 외쪽 팔찌에 라파엘로라는 이름을 남겼고 약혼반지까지 있었다. 사후에 제자가 지웠지만, 2001년 복원시에 복원</li>
+<li>라 포르나리나 : 왼쪽 팔찌에 라파엘로라는 이름을 남겼고 약혼반지까지 있었다. 사후에 제자가 지웠지만, 2001년 복원시에 복원</li>
+</ul>
+<p>068 마니에리즘</p>
+<ul>
+<li>매너리즘 : 슬럼프에 빠짐, 추진의 원동력이 떨어짐</li>
+<li>이상적인 조화에서 나타나는 아름다움은 없어지고 과장되고 불안정한 모습을 보임</li>
+<li>시대적 : 독일과 스페인이 로마를 침략, 1517년 루터의 종교개혁</li>
+<li>긴 목의 마돈나(파르미자니노, 1503~1540)</li>
+<li>매너리즘으로 비판받지만, 이 또한 발전 과정, 인상주의 시대로 가는 발판</li>
 </ul>
 <br>
 <h2 id="4-바로크와-로코코16001780"><strong>4. 바로크와 로코코(1600~1780)</strong></h2>
@@ -296,7 +304,17 @@
 <li>1887 남대서양 마르티니크 섬 - 1888 10~12, 고흐의 동생 테오 주선으로 고흐와 작업</li>
 <li>1891 타히티 섬으로 떠남, 이주정책(정착금)</li>
 <li>1893 파리로 돌아와서 전시 대실패, 1895 되돌아감</li>
-<li></li>
+<li>낮의 열기 (In the Heat of the Day) : (Sous le soleil exactement : 정확히 태양 아래에서) 주제가 된 사람(등만 보임)은 무시하고 색과 형태만으로 조화 이룸 (주제가 구도와 색이다)</li>
+<li>이아 오라나 마리아 : 성경 재해석, 원주민(성모, 예수, 따르는 사람), (아베 마리아)</li>
+</ul>
+<p>152 반 고흐(네덜란드, 1853~1890)</p>
+<ul>
+<li>가난한 집, 27세 화가 되기로 결심, 37세 요절하기 전까지 800여점, 7년 준비(모방) 기간 이후 3년 동안 자신의 그림을 그림</li>
+<li>화랑 운영하는 테오의 도움</li>
+<li>1888 프랑스 남부 지방 아를로 이사</li>
+<li>1890 동생 테오가 아들을 낳자 &quot;아몬드 나무&quot; (새 생명과 희망을 상징)</li>
+<li>1890 5월 첫 그림 팔림 : 아를의 붉은 포도밭</li>
+<li>동생 테오도 6개월 뒤 정신이상으로 사망</li>
 </ul>
 <br>
 <h2 id="9-모더니즘과-현대-미술1920"><strong>9. 모더니즘과 현대 미술(1920~)</strong></h2>
